# librime-lua

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  action-install.sh  appveyor.install.bat  appveyor.rime-install.bat  appveyor.yml  table_translation.lua
.github/workflows/: ci.yml
contrib/: librime.lua
lua5.3/: luaconf.h
lua5.4/: luaconf.h
sample/: component_sample.lua  lua_test.schema.yaml  luna_pinyin.custom.yaml  projection.lua  rime.lua  test.schema.yaml
sample/lua/: _rescue.lua  associate_component.lua  charset.lua  commit_history.lua  component_test.lua  date.lua  expand_translator.lua  expand_translator1.lua  leveldb.lua  ltable_tran.lua  menu_test.lua  number.lua  projection.lua  replace_input_tran.lua  reverse.lua  script_translator.lua  table_translator.lua  test_proc.lua  time.lua  userdb.lua  week.lua
sample/lua/test/: test_translator.lua
src/: CMakeLists.txt  component.h  config.h  git_version.h.in  lua.cc  lua.h  lua_ext_gears.cc  lua_ext_gears.h  lua_gears.cc  lua_gears.h  lua_memory.cc  lua_memory.h  lua_templates.h  lutf8lib-compat.c  modules.cc  opencc.cc  opencc.h  optional.h  script_translator.cc  table_translator.cc  table_translator.h  translation.cc  translator.h  translator_options.cc  types.cc  types_ext.cc  types_ext.inc
src/lib/: lauxlib-compat.c  lua-compat.h  lua.cc  lua.h  lua_export_type.h  lua_templates.h  luatype_boost_optional.h  luatype_std_optional.h  lutf8lib-compat.c  result.h
