if(MSVC)
    include_directories(${RIME_SOURCE_DIR}/thirdparty/src/lua5.3)
    aux_source_directory(${RIME_SOURCE_DIR}/thirdparty/src/lua5.3 LUA_SRC)
    add_definitions(-DLUA_BUILD_AS_DLL -DLUA_COMPAT_5_2)
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(LUA REQUIRED luajit)
    include_directories(${LUA_INCLUDE_DIRS})
endif()

aux_source_directory(src RIME_LUA_SRC)
aux_source_directory(src/lib RIME_LUA_LIB_SRC)

add_library(rime-lua-objs OBJECT ${RIME_LUA_SRC} ${RIME_LUA_LIB_SRC} ${LUA_SRC})
if(BUILD_SHARED_LIBS)
  set_target_properties(rime-lua-objs PROPERTIES POSITION_INDEPENDENT_CODE ON)
endif()

set(plugin_name "rime-lua" PARENT_SCOPE)
set(plugin_objs $<TARGET_OBJECTS:rime-lua-objs> PARENT_SCOPE)
set(plugin_deps ${LUA_LIBRARIES} PARENT_SCOPE)
set(plugin_modules "lua" PARENT_SCOPE)
