set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
aux_source_directory(. RIME_LUA_SRC)

if(BUILD_SHARED_LIBS AND BUILD_MERGED_PLUGINS)
  add_library(rime-lua OBJECT ${RIME_LUA_SRC} ${LUA_SRC})
  set_target_properties(rime-lua PROPERTIES POSITION_INDEPENDENT_CODE ON)
  set(rime_plugins_deps ${rime_plugins_deps} $<TARGET_OBJECTS:rime-lua> ${LUA_LIBRARIES} PARENT_SCOPE)
else()
  add_library(rime-lua ${RIME_LUA_SRC} ${LUA_SRC})
  target_link_libraries(rime-lua ${LUA_LIBRARIES})
  set_target_properties(rime-lua PROPERTIES VERSION ${RIME_LUA_VERSION} SOVERSION ${RIME_LUA_SOVERSION})
  if(XCODE_VERSION)
    set_target_properties(rime-lua PROPERTIES INSTALL_NAME_DIR "@rpath")
  endif(XCODE_VERSION)
  install(TARGETS rime-lua DESTINATION ${LIB_INSTALL_DIR})
endif()

set(rime_default_modules ${rime_default_modules} "lua" PARENT_SCOPE)
